// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Component Matches the blue striped snapshot 1`] = `
<table
  className="blue-stripe"
>
  <thead>
    <tr>
      <th
        colSpan="2"
      >
        
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className=""
      colSpan="2"
    >
      <td
        className=""
      >
        BCeID
      </td>
      <td>
        bobross42
      </td>
    </tr>
    <tr
      className=""
      colSpan="2"
    >
      <td
        className=""
      >
        Last Name
      </td>
      <td>
        Ross
      </td>
    </tr>
    <tr
      className=""
      colSpan="2"
    >
      <td
        className=""
      >
        First Name
      </td>
      <td>
        Bob
      </td>
    </tr>
    <tr
      className=""
      colSpan="2"
    >
      <td
        className=""
      >
        Email Address
      </td>
      <td>
        bob.ross@example.com
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table Component Matches the default snapshot 1`] = `
<table
  className=""
>
  <thead>
    <tr>
      <th
        colSpan="2"
      >
        BCeID Info
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className=""
      colSpan="2"
    >
      <td
        className=""
      >
        BCeID
      </td>
      <td>
        bobross42
      </td>
    </tr>
    <tr
      className=""
      colSpan="2"
    >
      <td
        className=""
      >
        Last Name
      </td>
      <td>
        Ross
      </td>
    </tr>
    <tr
      className=""
      colSpan="2"
    >
      <td
        className=""
      >
        First Name
      </td>
      <td>
        Bob
      </td>
    </tr>
    <tr
      className=""
      colSpan="2"
    >
      <td
        className=""
      >
        Email Address
      </td>
      <td>
        bob.ross@example.com
      </td>
    </tr>
  </tbody>
</table>
`;
